BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Project_Milestone_vod__c.object
<CustomObject>
    <description>PMO Tool Kit - used to capture Project Milestones related to a Project</description>
    <fields>
        <fullName>Comments_vod__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Milestone_Achieved_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Milestone Achieved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Milestone_End_Date_vod__c</fullName>
        <label>Milestone End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Milestone_Owner_vod__c</fullName>
        <label>Milestone Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_Start_Date_vod__c</fullName>
        <label>Milestone Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_vod__c</fullName>
        <label>Project</label>
        <referenceTo>Project_vod__c</referenceTo>
        <relationshipLabel>Project Milestones</relationshipLabel>
        <relationshipName>Project_Milestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Project Milestone</label>
    <nameField>
        <label>Project Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>